--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		           </address>
                 </div>
                 <div>
-                    <div>
+                    <div>l;;
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
                         <a href="http://www.linkedin.com/in/">LinkedIn</a>
