--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-auto">
-                        <p>© Copyright 2018 Ristorante Con Fusion</p>
+                        <p>© Copyright 2018 Ristorante Con Fusion</p> <i class="fa fa-file-image-o" aria-hidden="true"></i>
                     </div>
                 </div>
 
@@ -142,4 +142,4 @@
 
 </body>
 
-</html>..
+</html>
